--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div class="navbar navbar-default">
+    <% if current_user %>
+      <%= "Logged in as #{current_user.email}" %> | 
+      <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+    <% end %>
+  </div>
 
 <%= yield %>
 
