--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/suggestions/index.html.erb</p>
+<%= form_for suggestions_path do |f| %>
+    <div class="field">
+        <%=  f.label 'Song Name' %>
+        <%=  f.text_field :track_name %>
+        <%= f.submit %>
+     </div>
+<% end %>
