votes working somewhat, need join table

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,10 @@
 </head>
 <body>
   <div class="container">
+    <div class="label label-warning"><%= flash[:notice] %></div>
   	<div class="navbar navbar-default">
       <% if current_user %>
-        <%= "Logged in as #{current_user.email}" %> | 
+        <%= "Logged in as #{current_user.email} | Votes remaining: #{current_user.votes}" %> | 
         <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
       <% end %>
     </div>
