--- a/app/views/suggestions/_vote.html.erb
+++ b/app/views/suggestions/_vote.html.erb
@@ -12,7 +12,7 @@
     <tr>
       <th>
         <%= link_to upvote_path(upvote: track.spotify_id), method: 'patch' do %>
-          <button type="button" class="btn btn-default btn-sm" aria-label="Left Align">
+          <button type="button" class="btn btn-primary btn-sm" aria-label="Left Align">
             <span class="glyphicon glyphicon-arrow-up" aria-hidden="true>"> <%= track.upvotes %></span>
           </button>
         <% end %>
@@ -20,7 +20,7 @@
       <th>
         
         <%= link_to upvote_path(downvote: track.spotify_id), method: 'patch' do %>
-          <button type="button" class="btn btn-default btn-sm" aria-label="Left Align">
+          <button type="button" class="btn btn-danger btn-sm" aria-label="Left Align">
             <span class="glyphicon glyphicon-arrow-down" aria-hidden="true>"> <%= track.downvotes %></span>
           </button>
           <% end %>
