--- a/app/views/suggestions/_vote.html.erb
+++ b/app/views/suggestions/_vote.html.erb
@@ -11,17 +11,17 @@
   <% @suggestions.each do |track| %>
     <tr>
       <th>
-        <%= link_to upvote_path(upvote: track.spotify_id), method: 'patch' do %>
+        <%= link_to upvote_suggestion_path(track), method: 'post' do %>
           <button type="button" class="btn btn-primary btn-sm" aria-label="Left Align">
-            <span class="glyphicon glyphicon-arrow-up" aria-hidden="true>"> <%= track.upvotes %></span>
+            <span class="glyphicon glyphicon-arrow-up" aria-hidden="true>"> <%= track.upvotes.size %></span>
           </button>
         <% end %>
       </th>
       <th>
         
-        <%= link_to upvote_path(downvote: track.spotify_id), method: 'patch' do %>
+        <%= link_to downvote_suggestion_path(track), method: 'post' do %>
           <button type="button" class="btn btn-danger btn-sm" aria-label="Left Align">
-            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true>"> <%= track.downvotes %></span>
+            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true>"> <%= track.downvotes.size %></span>
           </button>
           <% end %>
       </th>
