--- a/app/views/suggestions/_spotify_search.html.erb
+++ b/app/views/suggestions/_spotify_search.html.erb
@@ -1,15 +1,11 @@
 
 <div class="input-group">
-    <%= form_tag search_spotify_path, method: 'search_spotify' do |f| %>
+    <%= form_tag suggestions_path, method: :get do |f| %>
       <%=  text_field_tag 'query', params[:query], :class => "form-control", :placeholder => "Search for a track name..." %>
       <%=  button_tag(type: "submit", :class => "btn btn-default") do %>
       Submit
     <% end %>
-
     </div>
-
-    
-
 <% end %>
 
 
